# artmancer-web

./: .gitattributes  .gitignore  API_REPORT.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_DIAGRAM.mmd  ARCHITECTURE_DIAGRAM.puml  ARCHITECTURE_DIAGRAM_DRAWIO.md  DEPLOYMENT_GUIDE.md  FIGURES_TO_CAPTURE.md  FILES_CHANGES.md  PIPELINE_DOCUMENTATION.tex  README.md  REFACTOR_COMPLETE.md  REFACTOR_SUMMARY.md
client/: eslint.config.mjs  eslint.config.mts  package-lock.json  package.json
client/src/app/: globals.css  layout.tsx  page.tsx
client/src/components/: AdminPanel.tsx  BackendWarmer.tsx  MuiThemeProvider.tsx  ServerControl.tsx  SmartWakeUp.tsx
client/src/components/DebugPanel/: DebugPanel.tsx  index.ts
client/src/components/Header/: Header.tsx
client/src/components/HelpBox/: HelpBox.tsx
client/src/components/MainCanvas/: MainCanvas.tsx  constants.ts  index.ts  utils.ts
client/src/components/Notification/: Notification.tsx  index.ts
client/src/components/Sidebar/: Sidebar.tsx
client/src/contexts/: LanguageContext.tsx  ServerContext.tsx  ThemeContext.tsx  index.ts
client/src/hooks/: index.ts  useImageFetcher.ts  useImageGeneration.ts  useImageHistory.ts  useImageTransform.ts  useImageUpload.ts  useMasking.ts  useModalStream.ts  useViewportControls.ts
client/src/services/: api.ts
client/src/theme/: muiTheme.ts
client/src/types/: radix-ui.d.ts
client/src/utils/: edgeDetection.ts
server/: .dockerignore  Dockerfile  README.md  REFACTOR_PLAN.md  REFACTOR_STATUS.md  check_triton.py  fix_line_endings.sh  fix_venv_location.sh  local_generate.py  mae-mask.py  main.py  modal_app.py  model_config.py  multimae_demo.py  pyproject.toml  requirements.txt  rp_handler.py  run_benchmark.sh  runpod_healthcheck.py  setup_venv_wsl.sh  start_server.bat  start_server.sh  test_api.py  test_generate.py  test_local_generate.py  test_modal_endpoint.py  upload_all_checkpoints.sh  upload_checkpoints_to_runpod.py
server/api_gateway/: __init__.py  main.py  router.py
server/app/: __init__.py  main.py
server/app/api/: __init__.py
server/app/api/endpoints/: __init__.py  _helpers.py  benchmark.py  debug.py  evaluation.py  generation.py  generation_async.py  generation_sync.py  image_utils.py  smart_mask.py  system.py  visualization.py  white_balance.py
server/app/cli/: __init__.py  benchmark_cli.py
server/app/core/: __init__.py  config.py  lama_model.py  pipeline.py  pix2pix_loader.py  qwen_loader.py  qwen_pipeline.py
server/app/models/: __init__.py  schemas.py  unified_schemas.py
server/app/services/: __init__.py  benchmark_service.py  condition_builder.py  container_state.py  debug_service.py  evaluation_service.py  fastsam_service.py  generation_service.py  image_cache.py  image_processing.py  job_cleanup.py  mask_segmentation_service.py  object_insertion_task.py  prompt_composer.py  reference_guided_insertion.py  rembg_service.py  visualization.py  white_balancing_task.py
server/app/utils/: __init__.py  dataset_preprocessor.py  metrics_utils.py
server/benchmark_results/: benchmark_results.csv  benchmark_results.json  benchmark_results.tex  summary.txt
server/shared/: __init__.py
server/shared/clients/: __init__.py  service_client.py
server/shared/schemas/: __init__.py
server/tests/: __init__.py  test_image_processing.py
(+28 files in other folders)
