[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.43.8",
    "boto3>=1.42.2",
    "diffusers>=0.35.2",
    "fastapi[standard]>=0.123.4",
    "hf-transfer>=0.1.9",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rembg>=2.0.68",
    "scikit-image>=0.25.2",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.3",
    "uvicorn[standard]>=0.23.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
diffusers = { git = "https://github.com/huggingface/diffusers" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
