[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "awscli>=1.43.8",
    "boto3>=1.42.2",
    "diffusers>=0.36.0",
    "fastapi[standard]>=0.123.4",
    "hf-transfer>=0.1.9",
    "modal>=1.2.4",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.1.0",
    "psutil>=7.1.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "scikit-image>=0.25.2",
    "torch>=2.5.0",
    "torchvision>=0.24.0",
    "einops>=0.3.2",
    "timm>=0.4.12",
    "transformers>=4.57.3",
    "typer>=0.20.0",
    "ultralytics>=8.3.234",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.27.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
